19 Jul 2018
fix: typo in function_tvmaze.php
fix: trivia results on index page not showing scrollbar
update: log vierer better messages splitting
fix: direct link to post button
fix: latest comments poster not using url_proxy
fix: removal of background

18 Jul 2018
update: database files
add: latest torrents slider using flexslider and torrent banners

17 Jul 2018
fix: background image not 100% width
fix: bluray releases getting incorrect imdbid

16 Jul 2018
add: bluray.com new releases page
replace: file_get_contents() with fetch()
add: omdb lookup to images_cleanup.php
fix: random_int larger int listed before smaller int casino.php

15 Jul 2018
fix: missing var
add: OMDb API
add: upcoming movies from imdb
merged: all lists into 1 file
update: check file/folder exists before processing
fix: images cleanup
update: composer require PHP >= 7.2.0
update: increase font size slightly
cleanup: general code cleanup, phpstorm
update: database files
fix: all like buttons
add: additional like buttons
update: all comments displayed in same manner
add: imdb info in requests and offers
add: cleanup script to download anf optimize images if using image proxy
remove: poster from image background
add: try/catch ImageProxy
fix: time sort in tvmaze.php
update: tmdb image sizes for better quality
add: min-width to index page blocks titles
rename: pm_system messages
update: pager_new.php pager_functions.php to return limits for fluentPDO
remove: manage_likes table

13 Jul 2018
fix: make action 'default' usercp.php

12 Jul 2018
fix: check if dir exists before traverse it log_viewer.php

11 Jul 2018
fix: background not displaying details.php
fix: query non existent table
add: TMDb Top 100 Movies
add: images table to store image urls
update: API get images to store urls
update: get_body_image to get from images table and get poster or background depending on screen orientation
update: normalize relative urls in js files
remove: Atlantis from countries signup.php invite_signup.php