@@ -29,6 +29,9 @@ if (!isset($_GET['id']) || !is_valid_id($_GET['id'])) {
     stderr("{$lang['details_user_error']}", "{$lang['details_bad_id']}{$_GET['id']}");
 }
 $id = (int) $_GET['id'];
+if (isset($_GET['uploaded'])) {
+    $HTMLOUT.= "<meta http-equiv='refresh' content='1;url=download.php?torrent={$id}" . ($CURUSER['ssluse'] == 3 ? '&amp;ssl=1' : '') . "' />";
+}
 $slot = make_freeslots($CURUSER['id'], 'fllslot_');
 $torrent['addedfree'] = $torrent['addedup'] = $free_slot = $double_slot = '';
 if (!empty($slot)) {
